--- a/Webpage/index.html
+++ b/Webpage/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
   <!--Google fonts-->
   <link href="//fonts.googleapis.com/css?family=Josefin+Sans:100,300|Muli:300" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -124,7 +124,7 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
     <!-- Latest compiled JavaScript -->
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
 
   </body>
 </html> <!--This ends the HTML document.-->
