--- a/Webpage/index.html
+++ b/Webpage/index.html
@@ -28,6 +28,14 @@
       font-size:100%;
       line-height:1.2;
     }
+	  .item active{
+	  	width:800px;
+	  	height:600px;
+	  }
+	  .item {
+	  	width:800px;
+	 	height:600px;
+	  }
 
 
 
